[gd_scene load_steps=18 format=3 uid="uid://dac54w6hyd25f"]

[ext_resource type="Script" path="res://Scripts/Enemies/Ghost/Ghost.gd" id="1_1fhny"]
[ext_resource type="Shader" path="res://Materials/Shaders/PositiveGhostDistortionTexture.gdshader" id="2_88868"]
[ext_resource type="Texture2D" uid="uid://c7v8qoc7gylk4" path="res://Assets/Sprites/Enemies/Ghost/Ghost.png" id="3_ely6n"]
[ext_resource type="Texture2D" uid="uid://bgnwfhclq11ba" path="res://Textures/PositiveGhost.tres" id="3_vq6k3"]
[ext_resource type="AudioStream" uid="uid://cv665uyxhi2u" path="res://Assets/Sounds/Levels/Lab/SFX_Shadow_Negative.wav" id="4_21o5t"]
[ext_resource type="Texture2D" uid="uid://cfpnyyy7rmf37" path="res://Assets/Sprites/Enemies/Ghost/SmokeParticles.png" id="4_pkxyj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c5rtt"]
atlas = ExtResource("3_ely6n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7lof"]
atlas = ExtResource("3_ely6n")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_taod5"]
atlas = ExtResource("3_ely6n")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyl8y"]
atlas = ExtResource("3_ely6n")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jlbt8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5rtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7lof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taod5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyl8y")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mgqdj"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 2
particles_anim_loop = true

[sub_resource type="Curve" id="Curve_4frgp"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.126096, 1), 0.0, 0.0, 0, 0, Vector2(0.507675, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_0l7eu"]
offsets = PackedFloat32Array(0, 0.0486726, 0.882353, 1)
colors = PackedColorArray(0.0627451, 0.121569, 0.203922, 0, 0.0105752, 0.0281144, 0.0325335, 1, 0.00290835, 0.00756682, 0.00857496, 1, 0.0745098, 0.137255, 0.141176, 0)

[sub_resource type="Curve" id="Curve_2s3q1"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.496711, 1), 0.0, 0.0, 0, 0, Vector2(0.970395, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_hfge4"]
offsets = PackedFloat32Array(0.0114416, 0.0526316, 0.935961, 0.981693)
colors = PackedColorArray(0.0117647, 0.0235294, 0.0313726, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0117647, 0.027451, 0.0352941, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_di5am"]
height = 24.0

[node name="GhostEnemy" type="CharacterBody2D"]
position = Vector2(-27, -5)
collision_layer = 16
collision_mask = 0
script = ExtResource("1_1fhny")
speed = 80.0
is_Chasing = true
shader_resource = ExtResource("2_88868")
shader_noise_texture = ExtResource("3_vq6k3")
ghost_noise = ExtResource("4_21o5t")

[node name="GhostSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jlbt8")
animation = &"Idle"

[node name="TrailParticles" type="CPUParticles2D" parent="GhostSprite"]
material = SubResource("CanvasItemMaterial_mgqdj")
position = Vector2(-15, 5)
scale = Vector2(5.32639, 5.32639)
amount = 25
randomness = 1.0
lifetime_randomness = 0.06
fixed_fps = 30
draw_order = 1
texture = ExtResource("4_pkxyj")
emission_shape = 2
emission_sphere_radius = 0.2
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, -40)
tangential_accel_min = -100.0
tangential_accel_max = 100.0
damping_min = 26.201
damping_max = 26.201
angle_min = -32.0
angle_max = 30.0
scale_amount_min = 0.25
scale_amount_max = 0.75
scale_amount_curve = SubResource("Curve_4frgp")
color_ramp = SubResource("Gradient_0l7eu")
anim_speed_max = 1.0

[node name="StaticSmokeParticles" type="CPUParticles2D" parent="GhostSprite"]
material = SubResource("CanvasItemMaterial_mgqdj")
position = Vector2(-15, 5)
amount = 25
randomness = 1.0
fixed_fps = 30
draw_order = 1
texture = ExtResource("4_pkxyj")
emission_shape = 2
emission_sphere_radius = 3.91
direction = Vector2(0, 0)
gravity = Vector2(0, -1)
orbit_velocity_min = 0.075
orbit_velocity_max = 0.45
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_2s3q1")
color_ramp = SubResource("Gradient_hfge4")
anim_speed_max = 1.0

[node name="GhostCollider" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_di5am")
